--- a/Server/styles/header.css
+++ b/Server/styles/header.css
@@ -17,6 +17,7 @@ header {
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
+    
 }
 
 .quicklinksItemDiv {
@@ -88,5 +89,7 @@ header {
         padding-top: 50px;
         padding-bottom: 50px;
         transform: translateX(-20px);
+        padding-left: 9px;
+        padding-right: 9px;
     }
 }
