--- a/Server/styles/projects.css
+++ b/Server/styles/projects.css
@@ -1,3 +1,7 @@
+body {
+    height: 100%;
+}
+
 main {
     color: var(--slategray);
 
@@ -28,9 +32,11 @@ main {
     background-color: #eeeeee;
 
     display: grid;
-    grid-template-columns: 20% 20% 50% 10%;
-    grid-template-rows: 70% 40%;
+    grid-template-columns: 20% 10% 50% 20%;
+    grid-template-rows: 70% 30%;
     height: 100px;
+
+    margin-bottom: 25px;
 }
 
 .listTitleBox {
@@ -58,14 +64,18 @@ main {
     grid-column-start: 3;
     grid-column-end: 3;
     grid-row-start: 1;
-    grid-row-end: 2;
+    grid-row-end: 3;
+    padding-right: 5px;
 }
 
-.listLinkBox {
+.listProjectLinkBox {
     grid-column-start: 4;
     grid-column-end: 4;
     grid-row-start: 1;
-    grid-row-end: 2;
+    grid-row-end: 3;
+
+    border-top-right-radius: 15px;
+    border-bottom-right-radius: 15px;
 }
 
 .listTitle {
@@ -76,9 +86,20 @@ main {
 }
 
 .listDate {
-    padding-left: 10px;
+    padding-left: 20px;
 }
 
 .listDescription {
     padding-top: 5px;
+}
+
+.listItem:hover .listProjectLinkBox {
+    background-color: #e0e0e0;
+}
+
+.listProjectLinkText {
+    text-align: center;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    line-height: 0px;
 }
