--- a/site/styles/header.css
+++ b/site/styles/header.css
@@ -4,6 +4,9 @@ header {
     display: grid;
 
     height: 150px;
+    width: 100vw;
+
+    /*box-shadow: 0 4px 2px -2px var(--slategray); */
 }
 
 .quicklinksItemDiv {
@@ -95,10 +98,10 @@ header {
 
 @media screen and (max-width: 1000px) {
     header {
-        height: 100%;
+        height: 250px;
 
         grid-template-columns: 5% auto 5%;
-        grid-template-rows: 10px 100px auto 10px;
+        grid-template-rows: 10px 100px auto 110px 10px;
     }
 
     #titleDiv {
@@ -114,14 +117,14 @@ header {
     }
 
     #quicklinksDiv {
-        grid-row-start: 3;
-        grid-row-end: 4;
+        grid-row-start: 4;
+        grid-row-end: 5;
         grid-column-start: 2;
         grid-column-end: 3;
 
         display: grid;
         grid-template-columns: auto 0% auto;
-        grid-template-rows: 50px 5% 50px;
+        grid-template-rows: 50px auto 50px;
 
         padding-left: 2.7%;
     }
