--- a/site/styles/main.css
+++ b/site/styles/main.css
@@ -45,6 +45,7 @@ a {
 body {
     height: 100vh;
     width: 100vw;
+    min-width: 100vw;
     position: relative;
     display: flex;
     flex-wrap: nowrap;
