--- a/site/styles/header.css
+++ b/site/styles/header.css
@@ -6,7 +6,7 @@ header {
     height: 150px;
     width: 100vw;
 
-    /*box-shadow: 0 4px 2px -2px var(--slategray); */
+    box-shadow: 0 4px 2px -2px var(--slategray);
 }
 
 .quicklinksItemDiv {
