--- a/site/simplymac/simplecheckin.css
+++ b/site/simplymac/simplecheckin.css
@@ -1,3 +1,37 @@
+#repairTree {
+    width: 80%;
+    display: grid;
+    grid-template-rows: auto;
+    grid-template-columns: 40%  30% 200px;
+}
+
+#commonSelectDiv {
+    display: grid;
+    grid-template-rows: auto;
+    grid-template-columns: 150px 325px;
+    text-align: right;
+}
+ #deviceSelectDiv {
+     display: grid;
+     grid-template-rows: auto;
+     grid-template-columns: 100px 250px;
+     text-align: right;
+ }
+
+#warrantyDiv {
+    display: grid;
+    grid-template-rows: auto;
+    grid-template-columns: 150px 25px;
+}
+
+#repairTree select {
+    margin-left: 10px;
+}
+
+#repairTree input {
+    margin-left: 10px;
+}
+
 .textInput {
     width: 100%;
 }
@@ -6,9 +40,10 @@
     width: 50px;
 }
 
-main {
+#forms {
     display: flex;
     flex-wrap: wrap;
+    -ms-flex-align: center;
 }
 
 .formDiv {
@@ -35,7 +70,7 @@ main {
 #GSXWarrantyDiv {
     display: grid;
     grid-template-rows: 1;
-    grid-template-columns: 80% 100px auto;
+    grid-template-columns: 75% 150px auto;
     height: 30px;
     
 }
@@ -53,7 +88,7 @@ main {
     width: 15px;
 }
 
-#GSXButtonDiv {
+#GSXButtonDiv, #SROButtonDiv {
     display: grid;
     grid-template-rows: 1;
     grid-template-columns: auto auto;
@@ -65,11 +100,27 @@ button {
     margin-left: 10%;
 }
 
-#GSXOutputText {
+#GSXOutputText , #SROOutputText {
     margin-top: 25px;
 }
 
 form input {
     margin-top: 5px;
     margin-bottom: 5px;
+    height: 23px;
+    padding-left: 5px;
+}
+
+#SROFormGrid {
+    display: grid;
+    grid-template-rows: 40px;
+    grid-template-columns: 100px auto;
+}
+
+#SROForm select {
+    width: 175px;
+}
+
+#SROForm input {
+    width: 225px;
 }
