--- a/site/simplymac/styles/simplecheckin.css
+++ b/site/simplymac/styles/simplecheckin.css
@@ -1,16 +1,42 @@
+html {
+    color: #EBEBEB;
+    background-color: #212121;
+}
+
+body {
+    color: #EBEBEB;
+    background-color: #212121;
+}
+
+h1 {
+    text-align: center;
+    color: #EBEBEB;
+}
+
+.link {
+    color: var(--main-blue);
+}
+
+p {
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
 main {
     padding-left: 0px;
 }
 
 #repairTree {
+    height: 30px;
     display: flex;
     justify-content: center;
     flex-direction: row;
     flex-wrap: wrap;
 }
 
-#repairTree>div {
+#repairTree div {
     width: min-content;
+    height: inherit;
     margin-bottom: 10px;
 }
 
@@ -19,11 +45,12 @@ main {
     grid-template-rows: auto;
     grid-template-columns: 150px 325px;
 }
- #optionSelectDiv {
-     display: grid;
-     grid-template-rows: auto;
-     grid-template-columns: 100px 250px;
- }
+
+#optionSelectDiv {
+    display: grid;
+    grid-template-rows: auto;
+    grid-template-columns: 100px 250px;
+}
 
 #warrantyDiv {
     display: grid;
@@ -52,14 +79,33 @@ main {
     margin-left: 10px;
 }
 
-.textInput {
+.textInput,textarea {
     width: 100%;
+    border: none;
+    background: #2121211a;
+    border-bottom: 3px solid rgb(22, 146, 204);
+    border-radius: 4px;
+    padding: 5px;
+}
+
+.textInput:focus,textarea:focus {
+    background: #2121214d;
+    transition: .5s;
 }
 
 #forms {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    line-height: 1.3em;
+}
+
+#forms p {
+    padding-top: 5px;
+    padding-bottom: 5px;
+    font-weight: 550;
+    letter-spacing: 0.3px;
+    line-height: 1.2em;
 }
 
 #GSXSideDiv,#SROSideDiv {
@@ -71,21 +117,22 @@ main {
     width: 90%;
     height: min-content;
     margin: 20px;
-    background-color: rgb(221, 221, 221);
     border-radius: 15px;
     padding: 15px;
+    color: #212121;
+    background-color: #EBEBEB;
 }
 
 #GSXIssueDiv {
     display: grid;
     grid-template-rows: 1;
-    grid-template-columns: 150px auto;
+    grid-template-columns: 100px auto;
 }
 
 #GSXCosmeticDiv {
     display: grid;
     grid-template-rows: 1;
-    grid-template-columns: 150px auto;
+    grid-template-columns: 175px auto;
 }
 
 #GSXWarrantyDiv {
@@ -110,15 +157,40 @@ main {
 }
 
 #GSXButtonDiv, #SROButtonDiv {
-    display: grid;
-    grid-template-rows: 1;
-    grid-template-columns: auto auto;
-    margin-top: 10px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-evenly;
+    align-items: center;
+    padding-top: 20px;
 }
 
-#forms button {
-    width: 80%;
-    margin-left: 10%;
+.submit-button,.clear-button {
+    width: 40%;
+    
+    background: #2121214d;
+    border: none;
+    border: solid transparent;
+    border-radius: 14px;
+    padding-top: 7px;
+    padding-bottom: 7px;
+    text-transform: uppercase;
+    font-weight: 900;
+    letter-spacing: 2px;
+}
+
+.submit-button:hover {
+    background: #1693CC;
+    box-shadow: 5px 5px 10px rgba(22, 146, 204, 0.363);
+    transition: .5s;
+    color: #EBEBEB;
+}
+
+.clear-button:hover {
+    background-color: #ac2c2c;
+    box-shadow: 5px 5px 10px #ac2c2c4f;
+    transition: .5s;
+    color: #EBEBEB;
 }
 
 #GSXOutputText , #SROOutputText {
@@ -129,10 +201,6 @@ form input {
     margin-top: 5px;
     margin-bottom: 5px;
     height: 23px;
-    padding-left: 5px;
-}
-
-textarea {
     padding-left: 5px;
 }
 
