--- a/site/simplymac/styles/operations.css
+++ b/site/simplymac/styles/operations.css
@@ -18,7 +18,8 @@ h1 {
 body {
     color: #EBEBEB;
     background-color: #212121;
-    height: 100vh;
+    height: 100%;
+    min-height: 100vh;
 }
 
 main {
@@ -97,6 +98,7 @@ p {
     border-top-left-radius: 0px;
     border-top-right-radius: 0px;
     transition: .5s;
+    text-transform: uppercase;
 }
 
 .container:hover .c-link {
